--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,9 @@
   "extends": ["stylelint-config-standard"],
   "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
   "rules": {
+    "csstree/validator": {
+      "ignoreValue": "font_url(.*)"
+    },
     "at-rule-no-unknown": [
       true,
       {
@@ -10,7 +13,9 @@
           "apply",
           "variants",
           "responsive",
-          "screen"
+          "screen",
+          "extend",
+          "import"
         ]
       }
     ],
@@ -22,11 +27,12 @@
           "apply",
           "variants",
           "responsive",
-          "screen"
+          "screen",
+          "extend",
+          "import"
         ]
       }
-    ],
-    "csstree/validator": true
+    ]
   },
   "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css"]
 }
